--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -187,6 +187,10 @@
     <Compile Include="Migrations\202103192347142_AddMembershipType.Designer.cs">
       <DependentUpon>202103192347142_AddMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202103200000451_PopulateMembershipType.cs" />
+    <Compile Include="Migrations\202103200000451_PopulateMembershipType.Designer.cs">
+      <DependentUpon>202103200000451_PopulateMembershipType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -285,6 +289,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202103192347142_AddMembershipType.resx">
       <DependentUpon>202103192347142_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103200000451_PopulateMembershipType.resx">
+      <DependentUpon>202103200000451_PopulateMembershipType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
