add annotation to name property in customer model

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -191,6 +191,10 @@
     <Compile Include="Migrations\202103200000451_PopulateMembershipType.Designer.cs">
       <DependentUpon>202103200000451_PopulateMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202103200022402_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\202103200022402_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>202103200022402_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -292,6 +296,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202103200000451_PopulateMembershipType.resx">
       <DependentUpon>202103200000451_PopulateMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103200022402_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>202103200022402_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
