--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -195,6 +195,14 @@
     <Compile Include="Migrations\202103200022402_ApplyAnnotationsToCustomerName.Designer.cs">
       <DependentUpon>202103200022402_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202103200123187_AddNameToMembershipTypeTable.cs" />
+    <Compile Include="Migrations\202103200123187_AddNameToMembershipTypeTable.Designer.cs">
+      <DependentUpon>202103200123187_AddNameToMembershipTypeTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202103200135334_PopulateMembershipType1.cs" />
+    <Compile Include="Migrations\202103200135334_PopulateMembershipType1.Designer.cs">
+      <DependentUpon>202103200135334_PopulateMembershipType1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -299,6 +307,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202103200022402_ApplyAnnotationsToCustomerName.resx">
       <DependentUpon>202103200022402_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103200123187_AddNameToMembershipTypeTable.resx">
+      <DependentUpon>202103200123187_AddNameToMembershipTypeTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103200135334_PopulateMembershipType1.resx">
+      <DependentUpon>202103200135334_PopulateMembershipType1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
