--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -215,9 +215,22 @@
     <Compile Include="Migrations\202103200232230_MakeNamePropRequiredInMembershipType.Designer.cs">
       <DependentUpon>202103200232230_MakeNamePropRequiredInMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202103200248016_AddGenreTableToMovie.cs" />
+    <Compile Include="Migrations\202103200248016_AddGenreTableToMovie.Designer.cs">
+      <DependentUpon>202103200248016_AddGenreTableToMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202103200252376_AddMovieAttributes.cs" />
+    <Compile Include="Migrations\202103200252376_AddMovieAttributes.Designer.cs">
+      <DependentUpon>202103200252376_AddMovieAttributes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202103200254051_AddMovieAttributes1.cs" />
+    <Compile Include="Migrations\202103200254051_AddMovieAttributes1.Designer.cs">
+      <DependentUpon>202103200254051_AddMovieAttributes1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -287,6 +300,7 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -334,6 +348,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202103200232230_MakeNamePropRequiredInMembershipType.resx">
       <DependentUpon>202103200232230_MakeNamePropRequiredInMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103200248016_AddGenreTableToMovie.resx">
+      <DependentUpon>202103200248016_AddGenreTableToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103200252376_AddMovieAttributes.resx">
+      <DependentUpon>202103200252376_AddMovieAttributes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103200254051_AddMovieAttributes1.resx">
+      <DependentUpon>202103200254051_AddMovieAttributes1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
